trunk/appointment/src/objects/Operating_Hours__c.object
<CustomObject>
    <description>The days your business is open and the daily working hours.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Friday_From_DT__c</fullName>
        <label>Friday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_From__c</fullName>
        <label>Friday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday_To_DT__c</fullName>
        <label>Friday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_To__c</fullName>
        <label>Friday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_From_DT__c</fullName>
        <label>Monday From  DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_From__c</fullName>
        <label>Monday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday_To_DT__c</fullName>
        <label>Monday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_To__c</fullName>
        <label>Monday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if this is a standard work day for the business.</inlineHelpText>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_From_DT__c</fullName>
        <label>Saturday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_From__c</fullName>
        <label>Saturday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_To_DT__c</fullName>
        <label>Saturday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_To__c</fullName>
        <label>Saturday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_From_DT__c</fullName>
        <label>Sunday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday_From__c</fullName>
        <label>Sunday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_To_DT__c</fullName>
        <label>Sunday To DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday_To__c</fullName>
        <label>Sunday To</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday_From_DT__c</fullName>
        <label>Thursday From DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thursday_From__c</fullName>
        <label>Thursday From</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thursday_To_DT__c</fullName>
        <label>Thursday To DT</label>
        <type>DateTime</type>
    </fields>
</CustomObject>